--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "podlink-embed",
   "version": "1.0.0",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack --config webpack.prod.js",
+    "start": "webpack serve --open --config webpack.dev.js"
   },
   "private": true,
   "repository": {
@@ -11,8 +12,11 @@
   },
   "devDependencies": {
     "css-loader": "^6.7.1",
+    "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.2",
+    "webpack-merge": "^5.8.0"
   }
 }
